--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,9 @@
                     <div class="promo__icon"><img src="icons/main_screen/messages.png" alt="messages">Ответим на все вопросы</div>
                 </div> 
 
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+
+                <div class="promo__link">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></div>
             </div>
       
        </div>
